--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      abc: '123'
+      abc: {{ abcvar }}
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
